Make getComments Restful
