# nodejs-server-server/api/swagger.yaml
@@ -379,47 +379,6 @@ paths:
                         $ref: '#/definitions/error'
             security: []
             x-swagger-router-controller: 'Meditor'
-    /getComments:
-        get:
-            summary: 'Gets comments for document'
-            description: 'Gets comments for document'
-            operationId: 'getComments'
-            parameters:
-                - name: 'title'
-                  in: 'query'
-                  description: 'Title of the document'
-                  required: true
-                  type: 'string'
-                - name: 'model'
-                  in: 'query'
-                  description: 'Model of the document'
-                  required: true
-                  type: 'string'
-            responses:
-                200:
-                    description: 'Successful response'
-                    schema:
-                        type: 'object'
-                        title: 'Comment'
-                        properties: {}
-                400:
-                    description: 'Bad request'
-                    schema:
-                        $ref: '#/definitions/error'
-                422:
-                    description: 'Invalid syntax'
-                    schema:
-                        $ref: '#/definitions/error'
-                500:
-                    description: 'Server error'
-                    schema:
-                        $ref: '#/definitions/error'
-                503:
-                    description: 'Service not available'
-                    schema:
-                        $ref: '#/definitions/error'
-            security: []
-            x-swagger-router-controller: 'Meditor'
     /postComment:
         post:
             summary: 'Puts comment for document'
